--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
 <body>
     <div id="app-container">
         <div id="top-info-bar">
+            <div id="appTitleContainer">
+                <div id="appLogo">⬡</div>
+                <span id="appTitle">HexLife Explorer</span>
+            </div>
             <div id="rulesetDisplayContainer">
                 <span>Ruleset: </span><code id="rulesetDisplay">N/A</code>
             </div>
             <div id="statsDisplayContainer">
                 <span>Tick: <span id="stat-tick">--</span></span>
                 <span>Ratio: <span id="stat-ratio">--</span>%</span>
+                <span>Brush: <span id="stat-brush-size">--</span></span>
                 <span>FPS: <span id="stat-fps">--</span></span>
                 <span>TPS: <span id="stat-actual-tps">--</span></span>
             </div>
