--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <span id="appTitle">HexLife Explorer</span>
             </div>
             <div id="rulesetDisplayContainer">
-                <span>Ruleset: </span><code id="rulesetDisplay">N/A</code>
+                <code id="rulesetDisplay">N/A</code>
             </div>
             <div id="statsDisplayContainer">
                 <span>Tick: <span id="stat-tick">--</span></span>
