--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="61Y9kjxqcAt7TYpyxqaFIaPjGP3IktL46ohSLVOZY4c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HexLife Explorer</title>
     <link rel="stylesheet" href="style.css">
