--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span>Ratio: <span id="stat-ratio">--</span>%</span>
                 <span>Brush: <span id="stat-brush-size">--</span></span>
                 <span>FPS: <span id="stat-fps">--</span></span>
-                <span>TPS: <span id="stat-actual-tps">--</span></span>
+                <span>TPS: <span id="stat-actual-tps">--</span>/<span id="stat-target-tps">--</span></span>
             </div>
         </div>
 
