--- a/index.html
+++ b/index.html
@@ -5,7 +5,38 @@
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="61Y9kjxqcAt7TYpyxqaFIaPjGP3IktL46ohSLVOZY4c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HexLife Explorer</title>
+    <title>HexLife Explorer - Interactive Hexagonal Cellular Automata</title>
+    <meta name="description" content="Explore complex emergent behaviors with HexLife Explorer, an interactive web-based cellular automaton simulator on a hexagonal grid, powered by WebGL2 and Web Workers. Define custom rulesets and observe intricate patterns unfold in multiple concurrent simulations.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://sidem.github.io/HexLife/">
+    <meta property="og:title" content="HexLife Explorer - Interactive Hexagonal Cellular Automata">
+    <meta property="og:description" content="Discover emergent complexity with HexLife Explorer, a WebGL2 & Web Worker powered cellular automaton on a hexagonal grid.">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://sidem.github.io/HexLife/">
+    <meta property="twitter:title" content="HexLife Explorer - Interactive Hexagonal Cellular Automata">
+    <meta property="twitter:description" content="Discover emergent complexity with HexLife Explorer, a WebGL2 & Web Worker powered cellular automaton on a hexagonal grid.">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "HexLife Explorer",
+      "operatingSystem": "WEB",
+      "applicationCategory": "GameApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0"
+      },
+      "abstract": "An interactive web-based cellular automaton simulator on a hexagonal grid, leveraging WebGL2 for high-performance rendering and Web Workers for concurrent simulations. Users can define custom rulesets and observe emergent behaviors.",
+      "url": "https://sidem.github.io/HexLife/",
+      "author": {
+        "@type": "Person",
+        "name": "Sidem"
+      },
+      "keywords": "cellular automata, hexagonal grid, WebGL, simulation, generative art, complex systems, web workers, javascript"
+    }
+    </script>
+
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
@@ -16,6 +47,12 @@
             <div id="appTitleContainer">
                 <div id="appLogo">⬡</div>
                 <span id="appTitle">HexLife Explorer</span>
+                <a href="https://github.com/Sidem/HexLife/" target="_blank" title="View on GitHub" id="githubLink" style="margin-left: 10px; color: #ccc; text-decoration: none; font-size:0.9em;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16" style="vertical-align: middle;">
+                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                    </svg>
+                    GitHub
+                </a>
             </div>
             <div id="rulesetDisplayContainer">
                 <code id="rulesetDisplay">N/A</code>
