--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
     </script>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=1.1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
