--- a/index.html
+++ b/index.html
@@ -172,16 +172,16 @@
                 </div>
             </div>
             <div class="form-group bias-controls">
-                <input type="checkbox" id="useCustomBiasCheckboxPopout" class="checkbox-input">
+                <input type="checkbox" id="useCustomBiasCheckboxPopout" class="checkbox-input" checked>
                 <label for="useCustomBiasCheckboxPopout" class="checkbox-label">Custom Bias:</label>
                 <div id="biasSliderMountPopout"></div>
             </div>
             <div class="form-group">
                 <label>Apply to:</label>
                 <div id="rulesetScopeSwitchPopout" class="three-way-switch">
-                    <input type="radio" id="scopeSelectedPopout" name="rulesetScopePopout" value="selected" class="radio-switch-input" checked>
+                    <input type="radio" id="scopeSelectedPopout" name="rulesetScopePopout" value="selected" class="radio-switch-input">
                     <label for="scopeSelectedPopout" class="radio-switch-label">Selected</label>
-                    <input type="radio" id="scopeAllPopout" name="rulesetScopePopout" value="all" class="radio-switch-input">
+                    <input type="radio" id="scopeAllPopout" name="rulesetScopePopout" value="all" class="radio-switch-input" checked>
                     <label for="scopeAllPopout" class="radio-switch-label">All</label>
                 </div>
             </div>
